@@ -1,3 +1,6 @@
+2008-12-22  Christopher Bratusek <nano-master@gmx.de>
+	* sawfish.ebuild.in: forgot to add this file
+
 2008-12-20  Christopher Bratusek <nano-master@gmx.de>
 	* configure.in: 1.3.5 released, bump to 1.5.0
 			bumped minimum librep to 0.17.3 and rep-gtk to 0.18.4,
